--- a/index.html
+++ b/index.html
@@ -1093,16 +1093,28 @@
         <div class="flex flex-wrap my-4 bg-slate-200 p-8 my-8">
             <h2 class="w-full text-xl uppercase">Where next</h2>
 
-            <div class="w-1/3 my-4 bg-white p-0">
-                <br />
+            <div class="w-1/3 my-4 bg-white py-16 overflow-hidden">
+                <a href="#">
+                    <div class="text-clc-silver uppercase inline-block w-full text-2xl mx-16">Where next?</div>
+                    <div class="text-clc-green uppercase inline-block w-full text-2xl mx-16">Co Curiccular</div>
+                    <img src="/assets/pic8.jpg" class="ml-16 mt-16" >
+                </a>
             </div>
 
-            <div class="w-1/3 my-4 bg-clc-green p-0">
-                <br />
+            <div class="w-1/3 my-4 bg-clc-green py-16 overflow-hidden">
+                <a href="#">
+                    <div class="text-clc-silver uppercase inline-block w-full text-2xl mx-16">Where next?</div>
+                    <div class="text-white uppercase inline-block w-full text-2xl mx-16">Science</div>
+                    <img src="/assets/pic11.jpg" class="ml-16 mt-16">
+                </a>
             </div>
 
-            <div class="w-1/3 my-4 bg-clc-gray p-0">
-                <br />
+            <div class="w-1/3 my-4 bg-clc-gray py-16 overflow-hidden">
+                <a href="#">
+                    <div class="text-clc-silver uppercase inline-block w-full text-2xl mx-16">Where next?</div>
+                    <div class="text-white uppercase inline-block w-full text-2xl mx-16">Art</div>
+                    <img src="/assets/pic5.jpg" class="ml-16 mt-16">
+                </a>
             </div>
 
             <div class="italic text-neutral-500 mt-4">
