added more typography styles

--- a/index.html
+++ b/index.html
@@ -19,31 +19,31 @@
             <h4 class="text-clc-gray uppercase text-2xl">Heading 4</h4>
             <h5 class="text-clc-gray uppercase text-xl">Heading 5</h5>
             <h6 class="text-clc-gray uppercase text-lg">Heading 6</h6>
-            <p class="text-clc-gray ">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut sint aliquam doloribus quia tempore dolor dolores assumenda esse dolorem nemo blanditiis incidunt rerum pariatur reiciendis ducimus odio ex, facilis officia!</p>
+            <p class="text-clc-gray ">Paragraph Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut sint aliquam doloribus quia tempore dolor dolores assumenda esse dolorem nemo blanditiis incidunt rerum pariatur reiciendis ducimus odio ex, facilis officia! <a href="#">Hyperlink Text</a></p>
         </div>
         
-        <div class="w-1/3 my-4 p-16 bg-clc-green prose">  
+        <div class="w-1/3 my-4 p-16 bg-clc-green prose prose-a:text-white">  
             <h1 class="text-white uppercase text-5xl">Heading 1</h1>
             <h2 class="text-white uppercase text-4xl">Heading 2</h2>
             <h3 class="text-white uppercase text-3xl">Heading 3</h3>
             <h4 class="text-white uppercase text-2xl">Heading 4</h4>
             <h5 class="text-white uppercase text-xl">Heading 5</h5>
             <h6 class="text-white uppercase text-lg">Heading 6</h6>
-            <p class="text-white">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut sint aliquam doloribus quia
+            <p class="text-white">Paragraph Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut sint aliquam doloribus quia
                 tempore dolor dolores assumenda esse dolorem nemo blanditiis incidunt rerum pariatur reiciendis ducimus odio ex,
-                facilis officia!</p>
+                facilis officia! <a href="#">Hyperlink Text</a></p>
         </div>
         
-        <div class="w-1/3 my-4 p-16 bg-clc-gray prose">
+        <div class="w-1/3 my-4 p-16 bg-clc-gray prose prose-a:text-white">
             <h1 class="text-clc-green uppercase text-5xl">Heading 1</h1>
             <h2 class="text-clc-silver uppercase text-4xl">Heading 2</h2>
             <h3 class="text-clc-silver uppercase text-3xl">Heading 3</h3>
             <h4 class="text-clc-silver uppercase text-2xl">Heading 4</h4>
             <h5 class="text-clc-silver uppercase text-xl">Heading 5</h5>
             <h6 class="text-clc-silver uppercase text-lg">Heading 6</h6>
-            <p class="text-white">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut sint aliquam doloribus quia
+            <p class="text-white">Paragraph Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut sint aliquam doloribus quia
                 tempore dolor dolores assumenda esse dolorem nemo blanditiis incidunt rerum pariatur reiciendis ducimus odio ex,
-                facilis officia!</p>
+                facilis officia! <a href="#">Hyperlink Text</a></p>
         </div>
 
         <div class="italic text-neutral-500 mt-4">
