--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <link href="/dist/output.css" rel="stylesheet">
 </head>
 
-<body id="top" class="smooth-scroll m-8">    
+<body id="top" class="smooth-scroll m-8">
+    
+    <img src="/assets/CLC_Logo_Xsmall_Pantone.svg" class="w-auto h-24 ml-8">
+    
     <!--typography-->
     <section>
     <div class="flex flex-wrap bg-slate-200 p-8 my-8">
