--- a/index.html
+++ b/index.html
@@ -1333,8 +1333,7 @@
                         <div x-data="{open:false}">
                             <div class="flex justify-between items-center cursor-pointer" @click="open=!open">
                                 <p class="pr-4 my-4 text-white text-3xl uppercase">Virtual Visits</p>
-                                <button x-html="open ? '-' :'+' "
-                                    class="px-2 text-white hover:text-white font-thin text-4xl"></button>
+                                <button x-html="open ? '-' :'+'" class="px-2 text-white hover:text-white font-thin text-4xl"></button>
                             </div>
                             <div x-show="open" x-cloak class="mr-4 py-4 prose text-white" x-transition>
                                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta repudiandae ut dolores totam nobis
