added breakpoint page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body id="top" class="smooth-scroll m-8">
-    
+    <a href="/breakpoints.html" class="float-right uppercase mr-8 underline">Breakpoints</a>
     <img src="/assets/CLC_Logo_Xsmall_Pantone.svg" class="w-auto h-24 ml-8">
     
     <!--typography-->
@@ -614,7 +614,7 @@
                     suscipit amet placeat deleniti dolorem rerum quasi commodi, enim repudiandae quo accusamus facilis
                     eligendi
                     similique."</div>
-                <div class="block text-xl text-clc-gray italic">Eve jardine-Young</div>
+                <div class="block text-xl text-clc-gray italic">Eve Jardine-Young</div>
                 <div class="block text-xl text-clc-gray italic">Principal</div>
                 <div class="flex place-content-end">
                     <a href="#"><img src="/assets/player.jpg" class="w-20 h-20 rounded-full m-2" /></a>
@@ -628,7 +628,7 @@
                     suscipit amet placeat deleniti dolorem rerum quasi commodi, enim repudiandae quo accusamus facilis
                     eligendi
                     similique."</div>
-                <div class="block text-xl text-clc-gray italic">Eve jardine-Young</div>
+                <div class="block text-xl text-clc-gray italic">Eve Jardine-Young</div>
                 <div class="block text-xl text-clc-gray italic">Principal</div>
                 <div class="flex place-content-end">
                     <a href="#"><img src="/assets/player.jpg" class="w-20 h-20 rounded-full m-2 grayscale" /></a>
@@ -642,7 +642,7 @@
                     suscipit amet placeat deleniti dolorem rerum quasi commodi, enim repudiandae quo accusamus facilis
                     eligendi
                     similique."</div>
-                <div class="block text-xl text-clc-silver italic">Eve jardine-Young</div>
+                <div class="block text-xl text-clc-silver italic">Eve Jardine-Young</div>
                 <div class="block text-xl text-clc-silver italic">Principal</div>
                 <div class="flex place-content-end">
                     <a href="#"><img src="/assets/player.jpg" class="w-20 h-20 rounded-full m-2 grayscale" /></a>
@@ -744,7 +744,7 @@
                         adipisicing elit. Sapiente, laudantium! Dolor assumenda culpa atque repellat,
                         suscipit amet placeat deleniti dolorem rerum quasi commodi, enim repudiandae quo accusamus facilis eligendi
                         similique."</div>
-                    <div class="block text-lg text-clc-silver italic">Eve jardine-Young</div>
+                    <div class="block text-lg text-clc-silver italic">Eve Jardine-Young</div>
                     <div class="block text-lg text-clc-silver italic">Principal</div>
                 </div>
                 <div class="flex-shrink-0 w-full snap-center">
@@ -752,7 +752,7 @@
                         adipisicing elit. Sapiente, laudantium! Dolor assumenda culpa atque repellat,
                         suscipit amet placeat deleniti dolorem rerum quasi commodi, enim repudiandae quo accusamus facilis eligendi
                         similique."</div>
-                    <div class="block text-lg text-clc-silver italic">Eve jardine-Young</div>
+                    <div class="block text-lg text-clc-silver italic">Eve Jardine-Young</div>
                     <div class="block text-lg text-clc-silver italic">Principal</div>
                 </div>
                 <div class="flex-shrink-0 w-full snap-center">
@@ -760,7 +760,7 @@
                         adipisicing elit. Sapiente, laudantium! Dolor assumenda culpa atque repellat,
                         suscipit amet placeat deleniti dolorem rerum quasi commodi, enim repudiandae quo accusamus facilis eligendi
                         similique."</div>
-                    <div class="block text-lg text-clc-silver italic">Eve jardine-Young</div>
+                    <div class="block text-lg text-clc-silver italic">Eve Jardine-Young</div>
                     <div class="block text-lg text-clc-silver italic">Principal</div>
                 </div>
                 <div class="flex-shrink-0 w-full snap-center">
@@ -1031,7 +1031,7 @@
                     40+ Points
                 </div>
                 <div class="text-6xl text-clc-green border-b-2 border-clc-silver py-6">
-                    <div class="float-right text-clc-silver text-base inline-block w-20 pt-2">A-Level</div>
+                    <div class="float-right text-clc-silver text-base inline-block w-20 pt-2">A Level</div>
                     <strong>43.2%</strong><br />
                     A*
                 </div>
