--- a/index.html
+++ b/index.html
@@ -255,13 +255,9 @@
                         IS<br />
                         SPARTA
                     </div>
-                    <div class="clear-both m-16 absolute bottom-0 left-0 z-20">
-                        <a href="#"
-                            class="antialiased text-white border-white border-[1px] px-4 py-2 my-1 inline-block w-auto float-left clear-left">Join
-                            Spartans</a>
-                        <a href="#"
-                            class="antialiased text-white border-white border-[1px] px-4 py-2 my-1 inline-block w-auto float-left clear-left">Join
-                            Athenians</a>
+                    <div class="clear-both m-16 absolute bottom-0 left-0 z-20 mix-blend-screen">
+                        <a href="#" class="antialiased text-white border-white border-[1px] px-4 py-2 my-1 inline-block w-auto float-left clear-left">Join Spartans</a>
+                        <a href="#" class="antialiased mix-blend-screen text-gray-900 bg-white px-4 py-2 my-1 inline-block w-auto float-left clear-left">Alternate Button</a>
                     </div>
                 </div>
             </div>
