--- a/breakpoints.html
+++ b/breakpoints.html
@@ -9,7 +9,7 @@
 </head>
 
 <body id="top" class="smooth-scroll m-8">
-    <a href="/index.html" class="float-right uppercase mr-8 underline">overview</a>
+    <a href="/index.html" class="float-right uppercase mr-8 underline">Elements</a>
     <img src="/assets/CLC_Logo_Xsmall_Pantone.svg" class="w-auto h-24 ml-8">
 
     <h1 class="w-full text-xl uppercase my-8 ml-8">Breakpoints</h1>
