--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     </div>
                     <div class="clear-both m-16 absolute bottom-0 left-0 z-20 mix-blend-screen">
                         <a href="#" class="antialiased text-white border-white border-[1px] px-4 py-2 my-1 inline-block w-auto float-left clear-left">Join Spartans</a>
-                        <a href="#" class="antialiased mix-blend-screen text-gray-900 bg-white px-4 py-2 my-1 inline-block w-auto float-left clear-left hover:text-white hover:border-white hover:bg-transparent border-[1px] hover:mix-blend-normal transition-all duration-300 ease-in-out">Alternate Button</a>
+                        <a href="#" class="antialiased mix-blend-screen text-gray-900 bg-white px-4 py-2 my-1 inline-block w-auto float-left clear-left hover:text-white hover:border-white hover:bg-transparent border-[1px] hover:mix-blend-normal transition-all duration-300 ease-in-out">Alternative Button</a>
                     </div>
                 </div>
             </div>
