--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h4 class="text-clc-gray uppercase text-2xl">Heading 4</h4>
             <h5 class="text-clc-gray uppercase text-xl">Heading 5</h5>
             <h6 class="text-clc-gray uppercase text-lg">Heading 6</h6>
-            <p class="text-clc-gray ">Paragraph Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut sint aliquam doloribus quia tempore dolor dolores assumenda esse dolorem nemo blanditiis incidunt rerum pariatur reiciendis ducimus odio ex, facilis officia! <a href="#">Hyperlink Text</a></p>
+            <p class="text-clc-gray ">Paragraph Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut sint aliquam doloribus quia tempore dolor dolores assumenda esse dolorem nemo blanditiis incidunt rerum pariatur reiciendis ducimus odio ex, facilis officia! <a href="#" class="decoration-clc-green/50 hover:decoration-green-400">Hyperlink Text</a></p>
         </div>
         
         <div class="w-1/3 my-4 p-16 bg-clc-green prose prose-a:text-white">  
@@ -59,6 +59,7 @@
             <p>Should choosing the block colour be option in CMS or only white?</p>
             <p>Are we happy with the prose line clamp with in tailwind?</p>
             <p>Do we need "Big" button with other components?</p>
+            <p>Issues with hyperlinks in past being shouty, consider link style?</p>
         </div>
 
     </div>
