--- a/index.html
+++ b/index.html
@@ -1611,6 +1611,7 @@
     <p>Search interaction / Search results?</p>
     <p>Popout notice?</p>
     <p>Affiliates in footer?</p>
+    <p>Considerations around Service Workers? Offline Support?</p>
 </div>
 
 
