end of day 1 with desktop version

--- a/breakpoints.html
+++ b/breakpoints.html
@@ -94,10 +94,10 @@
         </button>
     </div>
 
-    <div class="bg-gray-100 flex flex-row items-center place-content-center overflow-scroll">
+    <div class="bg-gray-100 flex flex-row items-start place-content-center">
     <!-- breakpoints -->
     <div :class="width">
-    <iframe src="components.html" class="w-full min-h-screen"></iframe>
+    <iframe src="components.html" class="w-full h-screen"></iframe>
     <!--end breakpoints-->
     </div> 
     </div>
