--- a/components.html
+++ b/components.html
@@ -8,11 +8,11 @@
     <script src="//unpkg.com/alpinejs" defer></script>
 </head>
 
-<body id="top" class="smooth-scroll m-0 bg-white">
+<body id="top" class="smooth-scroll m-0 bg-gray-100">
 
-<h2 class="w-screen text-xl uppercase bg-white p-8">Typography</h2>
+<h2 class="text-xl uppercase p-4">Typography</h2>
 <section>
-
+    <h3 class="text-md px-4 text-right">White section background colour</h3>
     <div class="m-4 p-16 bg-white">
         <div class="prose">
             <h1 class="text-clc-green uppercase text-5xl">Heading 1</h1>
@@ -30,6 +30,7 @@
         </div>
     </div>
 
+    <h3 class="text-md px-4 text-right">Primary brand section background colour</h3>
     <div class="m-4 p-16 bg-clc-green ">
         <div class="prose prose-a:text-white">
             <h1 class="text-white uppercase text-5xl">Heading 1</h1>
@@ -47,6 +48,25 @@
         </div>
     </div>
 
+    <h3 class="text-md px-4 text-right">Tertiary brand section background colour</h3>
+    <div class="m-4 p-16 bg-clc-gray">
+        <div class="prose prose-a:text-white">
+            <h1 class="text-clc-green uppercase text-5xl">Heading 1</h1>
+            <h2 class="text-clc-silver uppercase text-4xl">Heading 2</h2>
+            <h3 class="text-clc-silver uppercase text-3xl">Heading 3</h3>
+            <h4 class="text-clc-silver uppercase text-2xl">Heading 4</h4>
+            <h5 class="text-clc-silver uppercase text-xl">Heading 5</h5>
+            <h6 class="text-clc-silver uppercase text-lg">Heading 6</h6>
+            <p class="text-white">Paragraph Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut sint aliquam
+                doloribus
+                quia
+                tempore dolor dolores assumenda esse dolorem nemo blanditiis incidunt rerum pariatur reiciendis ducimus
+                odio ex,
+                facilis officia! <a href="#">Hyperlink Text</a></p>
+        </div>
+    </div>
+
+    <h3 class="text-md px-4 text-right">Quaternary brand section background colour</h3>
     <div class="m-4 p-16 bg-clc-pea">
         <div class="prose">
             <h1 class="text-clc-green uppercase text-5xl">Heading 1</h1>
@@ -64,60 +84,43 @@
         </div>
     </div>
 
-    <div class="m-4 p-16 bg-clc-gray">
-        <div class="prose prose-a:text-white">
-            <h1 class="text-clc-green uppercase text-5xl">Heading 1</h1>
-            <h2 class="text-clc-silver uppercase text-4xl">Heading 2</h2>
-            <h3 class="text-clc-silver uppercase text-3xl">Heading 3</h3>
-            <h4 class="text-clc-silver uppercase text-2xl">Heading 4</h4>
-            <h5 class="text-clc-silver uppercase text-xl">Heading 5</h5>
-            <h6 class="text-clc-silver uppercase text-lg">Heading 6</h6>
-            <p class="text-white">Paragraph Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut sint aliquam
-                doloribus
-                quia
-                tempore dolor dolores assumenda esse dolorem nemo blanditiis incidunt rerum pariatur reiciendis ducimus
-                odio ex,
-                facilis officia! <a href="#">Hyperlink Text</a></p>
-        </div>
-    </div>
 </section>
 
-<h2 class="w-screen text-xl uppercase bg-white p-8">Section Dividers</h2>
+<h2 class="text-xl uppercase p-4">Section Dividers</h2>
 <section>
+    <h3 class="text-md px-4 text-right">White into Primary Brand Colour</h3>
     <div class="m-4">
-        <div
-            class="p-8 bg-white relative before:content-[''] before:absolute before:bottom-0 before:w-0 before:h-0 before:border-solid before:border-t-[10px] before:border-r-[10px] before:border-b-0 before:border-l-[10px] before:left-[50%] before:translate-x-[-50%] before:translate-y-[100%] before:border-t-white before:border-r-transparent before:border-b-transparent before:border-l-transparent">
-            <p>White Section</p>
+        <div class="p-8 bg-white relative before:content-[''] before:absolute before:bottom-0 before:w-0 before:h-0 before:border-solid before:border-t-[10px] before:border-r-[10px] before:border-b-0 before:border-l-[10px] before:left-[50%] before:translate-x-[-50%] before:translate-y-[100%] before:border-t-white before:border-r-transparent before:border-b-transparent before:border-l-transparent"> 
         </div>
         <div class="text-white p-8 bg-clc-green">
-            <p>Primary Brand Colour Section</p>
         </div>
     </div>
 
+    <h3 class="text-md px-4 text-right">White into Tertiary Brand Colour</h3>
     <div class="m-4">
-        <div
-            class="p-8 bg-white relative before:content-[''] before:absolute before:bottom-0 before:w-0 before:h-0 before:border-solid before:border-t-[10px] before:border-r-[10px] before:border-b-0 before:border-l-[10px] before:left-[50%] before:translate-x-[-50%] before:translate-y-[100%] before:border-t-white before:border-r-transparent before:border-b-transparent before:border-l-transparent">
-            <p>White Section</p>
+        <div class="p-8 bg-white relative before:content-[''] before:absolute before:bottom-0 before:w-0 before:h-0 before:border-solid before:border-t-[10px] before:border-r-[10px] before:border-b-0 before:border-l-[10px] before:left-[50%] before:translate-x-[-50%] before:translate-y-[100%] before:border-t-white before:border-r-transparent before:border-b-transparent before:border-l-transparent">
         </div>
         <div class="text-white p-8 bg-clc-gray">
-            <p>Tertiary Section</p>
         </div>
     </div>
 
+    <h3 class="text-md px-4 text-right">Primary into Tertiary Brand Colour</h3>
     <div class="m-4">
-        <div
-            class="p-8 text-white bg-clc-green relative before:content-[''] before:absolute before:bottom-0 before:w-0 before:h-0 before:border-solid before:border-t-[10px] before:border-r-[10px] before:border-b-0 before:border-l-[10px] before:left-[50%] before:translate-x-[-50%] before:translate-y-[100%] before:border-t-clc-green before:border-r-transparent before:border-b-transparent before:border-l-transparent">
-            <p>Primary Section</p>
+        <div class="p-8 text-white bg-clc-green relative before:content-[''] before:absolute before:bottom-0 before:w-0 before:h-0 before:border-solid before:border-t-[10px] before:border-r-[10px] before:border-b-0 before:border-l-[10px] before:left-[50%] before:translate-x-[-50%] before:translate-y-[100%] before:border-t-clc-green before:border-r-transparent before:border-b-transparent before:border-l-transparent">
         </div>
-        <div class="text-clc-gray p-8 bg-clc-pea">
-            <p>Pastel Section</p>
-        </div>
+        <div class="text-white p-8 bg-clc-gray"></div>
+    </div>
+
+    <h3 class="text-md px-4 text-right">Primary into Quaternary Brand Colour</h3>
+    <div class="m-4">
+        <div class="p-8 text-white bg-clc-green relative before:content-[''] before:absolute before:bottom-0 before:w-0 before:h-0 before:border-solid before:border-t-[10px] before:border-r-[10px] before:border-b-0 before:border-l-[10px] before:left-[50%] before:translate-x-[-50%] before:translate-y-[100%] before:border-t-clc-green before:border-r-transparent before:border-b-transparent before:border-l-transparent"></div>
+        <div class="text-clc-gray p-8 bg-clc-pea"></div>
     </div>
 
 </section>
 
 
-<h2 class="w-screen text-xl uppercase bg-white p-8">Footer</h2>
+<h2 class="text-xl uppercase p-4">Footer</h2>
 <section>
     <div class="m-4 bg-clc-gray flex flex-col items-center">
         <div class="flex flex-col items-center max-w-2xl">
@@ -131,7 +134,7 @@
             <div class="w-full flex flex-col">
                 <div x-data="{open:false}" class="">
                     <div class="px-16 md:px-8 lg:px-0 flex justify-between items-center cursor-pointer" @click="open=!open">
-                        <p class="my-4 text-white hover:text-clc-green">Contact</p>
+                        <p class="my-4 text-white hover:text-clc-green lg:text-lg">Contact</p>
                         <button x-html="open ? '-' :'+' "
                             class="text-white hover:text-clc-green font-thin text-2xl font-serif"></button>
                     </div>
@@ -146,7 +149,7 @@
 
                 <div x-data="{open:false}" class="">
                     <div class="px-16 md:px-8 lg:px-0 flex justify-between items-center cursor-pointer" @click="open=!open">
-                        <p class="my-4 text-white hover:text-clc-green">Admissions</p>
+                        <p class="my-4 text-white hover:text-clc-green lg:text-lg">Admissions</p>
                         <button x-html="open ? '-' :'+' "
                             class="text-white hover:text-clc-green font-thin text-2xl font-serif"></button>
                     </div>
@@ -161,7 +164,7 @@
 
                 <div x-data="{open:false}" class="">
                     <div class="px-16 md:px-8 lg:px-0 flex justify-between items-center cursor-pointer" @click="open=!open">
-                        <p class="my-4 text-white hover:text-clc-green">Parents</p>
+                        <p class="my-4 text-white hover:text-clc-green lg:text-lg">Parents</p>
                         <button x-html="open ? '-' :'+' "
                             class="text-white hover:text-clc-green font-thin text-2xl font-serif"></button>
                     </div>
@@ -176,7 +179,7 @@
 
                 <div x-data="{open:false}" class="">
                     <div class="px-16 md:px-8 lg:px-0 flex justify-between items-center cursor-pointer" @click="open=!open">
-                        <p class="my-4 text-white hover:text-clc-green">Students</p>
+                        <p class="my-4 text-white hover:text-clc-green lg:text-lg">Students</p>
                         <button x-html="open ? '-' :'+' "
                             class="text-white hover:text-clc-green font-thin text-2xl font-serif"></button>
                     </div>
