--- a/components.html
+++ b/components.html
@@ -10,82 +10,6 @@
 
 <body id="top" class="smooth-scroll m-0 bg-gray-100">
 
-<h2 class="text-xl uppercase p-4">Typography</h2>
-<section>
-    <h3 class="text-md px-4 text-right">White section background colour</h3>
-    <div class="m-4 p-16 bg-white">
-        <div class="prose">
-            <h1 class="text-clc-green uppercase text-5xl">Heading 1</h1>
-            <h2 class="text-clc-gray uppercase text-4xl">Heading 2</h2>
-            <h3 class="text-clc-gray uppercase text-3xl">Heading 3</h3>
-            <h4 class="text-clc-gray uppercase text-2xl">Heading 4</h4>
-            <h5 class="text-clc-gray uppercase text-xl">Heading 5</h5>
-            <h6 class="text-clc-gray uppercase text-lg">Heading 6</h6>
-            <p class="text-clc-gray ">Paragraph Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut sint
-                aliquam
-                doloribus quia tempore dolor dolores assumenda esse dolorem nemo blanditiis incidunt rerum pariatur
-                reiciendis
-                ducimus odio ex, facilis officia! <a href="#"
-                    class="decoration-clc-green/50 hover:decoration-green-400">Hyperlink Text</a></p>
-        </div>
-    </div>
-
-    <h3 class="text-md px-4 text-right">Primary brand section background colour</h3>
-    <div class="m-4 p-16 bg-clc-green ">
-        <div class="prose prose-a:text-white">
-            <h1 class="text-white uppercase text-5xl">Heading 1</h1>
-            <h2 class="text-white uppercase text-4xl">Heading 2</h2>
-            <h3 class="text-white uppercase text-3xl">Heading 3</h3>
-            <h4 class="text-white uppercase text-2xl">Heading 4</h4>
-            <h5 class="text-white uppercase text-xl">Heading 5</h5>
-            <h6 class="text-white uppercase text-lg">Heading 6</h6>
-            <p class="text-white">Paragraph Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut sint aliquam
-                doloribus
-                quia
-                tempore dolor dolores assumenda esse dolorem nemo blanditiis incidunt rerum pariatur reiciendis ducimus
-                odio ex,
-                facilis officia! <a href="#">Hyperlink Text</a></p>
-        </div>
-    </div>
-
-    <h3 class="text-md px-4 text-right">Tertiary brand section background colour</h3>
-    <div class="m-4 p-16 bg-clc-gray">
-        <div class="prose prose-a:text-white">
-            <h1 class="text-clc-green uppercase text-5xl">Heading 1</h1>
-            <h2 class="text-clc-silver uppercase text-4xl">Heading 2</h2>
-            <h3 class="text-clc-silver uppercase text-3xl">Heading 3</h3>
-            <h4 class="text-clc-silver uppercase text-2xl">Heading 4</h4>
-            <h5 class="text-clc-silver uppercase text-xl">Heading 5</h5>
-            <h6 class="text-clc-silver uppercase text-lg">Heading 6</h6>
-            <p class="text-white">Paragraph Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut sint aliquam
-                doloribus
-                quia
-                tempore dolor dolores assumenda esse dolorem nemo blanditiis incidunt rerum pariatur reiciendis ducimus
-                odio ex,
-                facilis officia! <a href="#">Hyperlink Text</a></p>
-        </div>
-    </div>
-
-    <h3 class="text-md px-4 text-right">Quaternary brand section background colour</h3>
-    <div class="m-4 p-16 bg-clc-pea">
-        <div class="prose">
-            <h1 class="text-clc-green uppercase text-5xl">Heading 1</h1>
-            <h2 class="text-clc-gray uppercase text-4xl">Heading 2</h2>
-            <h3 class="text-clc-gray uppercase text-3xl">Heading 3</h3>
-            <h4 class="text-clc-gray uppercase text-2xl">Heading 4</h4>
-            <h5 class="text-clc-gray uppercase text-xl">Heading 5</h5>
-            <h6 class="text-clc-gray uppercase text-lg">Heading 6</h6>
-            <p class="text-clc-gray ">Paragraph Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut sint
-                aliquam
-                doloribus quia tempore dolor dolores assumenda esse dolorem nemo blanditiis incidunt rerum pariatur
-                reiciendis
-                ducimus odio ex, facilis officia! <a href="#"
-                    class="decoration-clc-green/50 hover:decoration-green-400">Hyperlink Text</a></p>
-        </div>
-    </div>
-
-</section>
-
 <h2 class="text-xl uppercase p-4">Menu</h2>
 <section>
     <h3 class="text-md px-4 text-right">White section background colour</h3>
@@ -888,6 +812,82 @@
             9/8 | A*
         </div>
     </div>
+</section>
+
+<h2 class="text-xl uppercase p-4">Typography Block</h2>
+<section>
+    <h3 class="text-md px-4 text-right">White section background colour</h3>
+    <div class="m-4 p-16 bg-white">
+        <div class="prose">
+            <h1 class="text-clc-green uppercase text-5xl">Heading 1</h1>
+            <h2 class="text-clc-gray uppercase text-4xl">Heading 2</h2>
+            <h3 class="text-clc-gray uppercase text-3xl">Heading 3</h3>
+            <h4 class="text-clc-gray uppercase text-2xl">Heading 4</h4>
+            <h5 class="text-clc-gray uppercase text-xl">Heading 5</h5>
+            <h6 class="text-clc-gray uppercase text-lg">Heading 6</h6>
+            <p class="text-clc-gray ">Paragraph Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut sint
+                aliquam
+                doloribus quia tempore dolor dolores assumenda esse dolorem nemo blanditiis incidunt rerum pariatur
+                reiciendis
+                ducimus odio ex, facilis officia! <a href="#"
+                    class="decoration-clc-green/50 hover:decoration-green-400">Hyperlink Text</a></p>
+        </div>
+    </div>
+
+    <h3 class="text-md px-4 text-right">Primary brand section background colour</h3>
+    <div class="m-4 p-16 bg-clc-green ">
+        <div class="prose prose-a:text-white">
+            <h1 class="text-white uppercase text-5xl">Heading 1</h1>
+            <h2 class="text-white uppercase text-4xl">Heading 2</h2>
+            <h3 class="text-white uppercase text-3xl">Heading 3</h3>
+            <h4 class="text-white uppercase text-2xl">Heading 4</h4>
+            <h5 class="text-white uppercase text-xl">Heading 5</h5>
+            <h6 class="text-white uppercase text-lg">Heading 6</h6>
+            <p class="text-white">Paragraph Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut sint aliquam
+                doloribus
+                quia
+                tempore dolor dolores assumenda esse dolorem nemo blanditiis incidunt rerum pariatur reiciendis ducimus
+                odio ex,
+                facilis officia! <a href="#">Hyperlink Text</a></p>
+        </div>
+    </div>
+
+    <h3 class="text-md px-4 text-right">Tertiary brand section background colour</h3>
+    <div class="m-4 p-16 bg-clc-gray">
+        <div class="prose prose-a:text-white">
+            <h1 class="text-clc-green uppercase text-5xl">Heading 1</h1>
+            <h2 class="text-clc-silver uppercase text-4xl">Heading 2</h2>
+            <h3 class="text-clc-silver uppercase text-3xl">Heading 3</h3>
+            <h4 class="text-clc-silver uppercase text-2xl">Heading 4</h4>
+            <h5 class="text-clc-silver uppercase text-xl">Heading 5</h5>
+            <h6 class="text-clc-silver uppercase text-lg">Heading 6</h6>
+            <p class="text-white">Paragraph Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut sint aliquam
+                doloribus
+                quia
+                tempore dolor dolores assumenda esse dolorem nemo blanditiis incidunt rerum pariatur reiciendis ducimus
+                odio ex,
+                facilis officia! <a href="#">Hyperlink Text</a></p>
+        </div>
+    </div>
+
+    <h3 class="text-md px-4 text-right">Quaternary brand section background colour</h3>
+    <div class="m-4 p-16 bg-clc-pea">
+        <div class="prose">
+            <h1 class="text-clc-green uppercase text-5xl">Heading 1</h1>
+            <h2 class="text-clc-gray uppercase text-4xl">Heading 2</h2>
+            <h3 class="text-clc-gray uppercase text-3xl">Heading 3</h3>
+            <h4 class="text-clc-gray uppercase text-2xl">Heading 4</h4>
+            <h5 class="text-clc-gray uppercase text-xl">Heading 5</h5>
+            <h6 class="text-clc-gray uppercase text-lg">Heading 6</h6>
+            <p class="text-clc-gray ">Paragraph Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut sint
+                aliquam
+                doloribus quia tempore dolor dolores assumenda esse dolorem nemo blanditiis incidunt rerum pariatur
+                reiciendis
+                ducimus odio ex, facilis officia! <a href="#"
+                    class="decoration-clc-green/50 hover:decoration-green-400">Hyperlink Text</a></p>
+        </div>
+    </div>
+
 </section>
 
 <h2 class="text-xl uppercase p-4">Tables</h2>
