video gradients and blockquotes

--- a/components.html
+++ b/components.html
@@ -70,29 +70,29 @@
 <h2 class="text-xl uppercase p-4">Block Quote Block</h2>
 <section>
     <h3 class="text-md px-4 text-right">White section background colour</h3>
-    <div class="m-4 p-0 bg-white">
-        <div class="text-clc-green p-16 text-6xl antialiased">
+    <div class="m-4 bg-white">
+        <div class="text-clc-green p-16 md:p-24 lg:p-32 xl:p-40 2xl:p-48 tracking-tight antialiased text-6xl lg:text-7xl xl:text-8xl 2xl:text-9xl">
             It's more than your grades, it's about the person you become.
         </div>
     </div>
 
     <h3 class="text-md px-4 text-right">Primary section background colour</h3>
-    <div class="m-4 p-0 bg-clc-green">
-        <div class="text-white p-16 text-6xl antialiased">
+    <div class="m-4 bg-clc-green">
+        <div class="text-white p-16 md:p-24 lg:p-32 xl:p-40 2xl:p-48 tracking-tight antialiased text-6xl lg:text-7xl xl:text-8xl 2xl:text-9xl">
             It's more than your grades, it's about the person you become.
         </div>
     </div>
 
     <h3 class="text-md px-4 text-right">Tertiary section background colour</h3>
-    <div class="m-4 p-0 bg-clc-gray">
-        <div class="text-clc-silver p-16 text-6xl antialiased">
+    <div class="m-4 bg-clc-gray">
+        <div class="text-clc-silver p-16 md:p-24 lg:p-32 xl:p-40 2xl:p-48 tracking-tight antialiased text-6xl lg:text-7xl xl:text-8xl 2xl:text-9xl">
             It's more than your grades, it's about the person you become.
         </div>
     </div>
 
     <h3 class="text-md px-4 text-right">Quaternary section background colour</h3>
-    <div class="m-4 p-0 bg-clc-pea">
-        <div class="text-clc-gray p-16 text-6xl antialiased">
+    <div class="m-4 bg-clc-pea">
+        <div class="text-clc-gray p-16 md:p-24 lg:p-32 xl:p-40 2xl:p-48 tracking-tight antialiased text-6xl lg:text-7xl xl:text-8xl 2xl:text-9xl">
             It's more than your grades, it's about the person you become.
         </div>
     </div>
@@ -215,11 +215,10 @@
 <h2 class="text-xl uppercase p-4">Video Gradients</h2>
 <section>
     <h3 class="text-md px-4 text-right">White section background colour</h3>
-    <div class="m-4 p-0 bg-white">
-        <div class="bg-white h-auto inline-block w-full p-16 text-clc-green">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Sapiente, laudantium! Dolor assumenda culpa atque repellat,
-            suscipit amet placeat deleniti dolorem rerum quasi commodi, enim repudiandae quo accusamus facilis eligendi
-            similique.</div>
+    <div class="m-4 bg-white">
+        <p>&nbsp</p>
+        <p>&nbsp</p>
+        <p>&nbsp</p>
         <div class="relative">
             <div class="absolute left-0 top-0 w-full h-full z-10 bg-gradient-to-b from-white opacity-100 pointer-events-none">
             </div>
@@ -230,10 +229,9 @@
 
     <h3 class="text-md px-4 text-right">Primary section background colour</h3>
     <div class="m-4 p-0 bg-clc-green">
-        <div class="bg-clc-green h-auto inline-block w-full p-16 text-white">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Sapiente, laudantium! Dolor assumenda culpa atque repellat,
-            suscipit amet placeat deleniti dolorem rerum quasi commodi, enim repudiandae quo accusamus facilis eligendi
-            similique.</div>
+        <p>&nbsp</p>
+        <p>&nbsp</p>
+        <p>&nbsp</p>
         <div class="relative">
             <div
                 class="absolute left-0 top-0 w-full h-full z-10 bg-gradient-to-b from-clc-green opacity-100 pointer-events-none">
@@ -245,10 +243,9 @@
 
     <h3 class="text-md px-4 text-right">Tertiary section background colour</h3>
     <div class="m-4 p-0 bg-clc-gray">
-        <div class="bg-clc-gray h-auto inline-block w-full p-16 text-white">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Sapiente, laudantium! Dolor assumenda culpa atque repellat,
-            suscipit amet placeat deleniti dolorem rerum quasi commodi, enim repudiandae quo accusamus facilis eligendi
-            similique.</div>
+        <p>&nbsp</p>
+        <p>&nbsp</p>
+        <p>&nbsp</p>
         <div class="relative">
             <div
                 class="absolute left-0 top-0 w-full h-full z-10 bg-gradient-to-b from-clc-gray opacity-100 pointer-events-none">
@@ -260,10 +257,9 @@
 
     <h3 class="text-md px-4 text-right">Quaternary section background colour</h3>
     <div class="m-4 p-0 bg-clc-pea">
-        <div class="bg-clc-pea h-auto inline-block w-full p-16 text-clc-gray">Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Sapiente, laudantium! Dolor assumenda culpa atque repellat,
-            suscipit amet placeat deleniti dolorem rerum quasi commodi, enim repudiandae quo accusamus facilis eligendi
-            similique.</div>
+        <p>&nbsp</p>
+        <p>&nbsp</p>
+        <p>&nbsp</p>
         <div class="relative">
             <div
                 class="absolute left-0 top-0 w-full h-full z-10 bg-gradient-to-b from-clc-pea opacity-100 pointer-events-none">
