--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <script src="//unpkg.com/alpinejs" defer></script>
 </head>
 
-<body id="top" class="smooth-scroll m-0">
+<body id="top" class="smooth-scroll m-0 bg-clc-gray">
     <section class="relative" x-data="{width: 'w-[640px] min-w-[640px]'}">
     <div class="sticky top-0 bg-clc-gray w-full my-0 flex place-content-center gap-0 z-50 px-4">
         <img src="/assets/CLC_Logo_Xsmall_White.svg" class="w-36 h-auto mr-20">
-        <button id="default"
+        <button id="default" title="sm"
         @click="width = 'w-[640px] min-w-[640px]'"
         class="flex flex-col items-center text-white focus:outline-none focus:bg-sky-100 p-4 focus:text-gray-800">
             <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" viewBox="0 0 16 16">
@@ -27,7 +27,7 @@
             document.getElementById("default").focus()
         </script>
 
-        <button 
+        <button title="md"
         @click="width = 'w-[768px] min-w-[768px]'"
         class="flex flex-col items-center text-white focus:outline-none focus:bg-sky-100 p-4 focus:text-gray-800">
             <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-tablet"
@@ -40,7 +40,7 @@
             <span class="text-xs uppercase">Tablet</span>
         </button>
 
-        <button 
+        <button title="lg" 
         @click="width = 'w-[1024px] min-w-[1024px]'"
         class="flex flex-col items-center text-white focus:outline-none focus:bg-sky-100 p-4 focus:text-gray-800">
             <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-laptop"
@@ -52,7 +52,7 @@
             <span class="text-xs uppercase">Laptop</span>
         </button>
 
-        <button 
+        <button title="xl" 
         @click="width = 'w-[1280px] min-w-[1280px]'"
         class="flex flex-col items-center text-white focus:outline-none focus:bg-sky-100 p-4 focus:text-gray-800">
             <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-pc-display"
@@ -64,15 +64,15 @@
             <span class="text-xs uppercase">Desktop</span>
         </button>
 
-        <button 
-        @click="width = 'w-[1526px] min-w-[1526px]'"
+        <button title="2xl"
+        @click="width = 'w-[1600px] min-w-[1600px]'"
         class="flex flex-col items-center text-white focus:outline-none focus:bg-sky-100 p-4 focus:text-gray-800">
             <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-display"
                 viewBox="0 0 16 16">
                 <path
                     d="M0 4s0-2 2-2h12s2 0 2 2v6s0 2-2 2h-4c0 .667.083 1.167.25 1.5H11a.5.5 0 0 1 0 1H5a.5.5 0 0 1 0-1h.75c.167-.333.25-.833.25-1.5H2s-2 0-2-2V4zm1.398-.855a.758.758 0 0 0-.254.302A1.46 1.46 0 0 0 1 4.01V10c0 .325.078.502.145.602.07.105.17.188.302.254a1.464 1.464 0 0 0 .538.143L2.01 11H14c.325 0 .502-.078.602-.145a.758.758 0 0 0 .254-.302 1.464 1.464 0 0 0 .143-.538L15 9.99V4c0-.325-.078-.502-.145-.602a.757.757 0 0 0-.302-.254A1.46 1.46 0 0 0 13.99 3H2c-.325 0-.502.078-.602.145z" />
             </svg>
-            <span class="text-xs mt-2">1526px</span>
+            <span class="text-xs mt-2">&#62; 1526px</span>
             <span class="text-xs uppercase">Large</span>
         </button>
 
